--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -28,6 +28,7 @@ $google-hover-border: #C6C6C6;
 // Breakpoints
 $break-small: 640px;
 $break-medium: 1024px;
+$break-large: 1440px;
 
 // Imports
 @import "compass/reset";
